<resources>
  <string name="app_name">PianoGrupo#03</string>
  <string name="piano">Piano</string>
  <string name="intrumentos">Intrumentos</string>
  <string name="animales">Animales</string>
  <string name="piano_virtual">Piano Virtual</string>
  <string name="toca_una_tecla">Toca una tecla</string>
  <string name="nota_do">DO</string>
  <string name="nota_re">RE</string>
  <string name="nota_mi">MI</string>
  <string name="nota_fa">FA</string>
  <string name="nota_sol">SOL</string>
  <string name="nota_la">LA</string>
  <string name="nota_si">SI</string>
    <string name="grupo">Desarroladores</string>
  <string name="salir">Salir</string>
    <string name="team">Team</string>
  <string name="foto_enox">Foto Enox</string>
  <string name="brandon_enox_valdez_linares">Brandon Enox Valdez Linares</string>
  <string name="todo">TODO</string>
  <string name="mauricio_alexander_perez_dominguez">Mauricio Alexander Perez Dominguez</string>
  <string name="foto_geo">Foto Geo</string>
  <string name="foto_mauricio">Foto Mauricio</string>
  <string name="carlos_geovanni_salazar_monterroza">Carlos Geovanni Salazar Monterroza</string>
  <string name="rodrigo_jose_claros_sola">Rodrigo Jose Claros Sola</string>
  <string name="foto_rodri">Foto Rodri</string>
</resources>