<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item android:id="@+id/piano"
      android:title="@string/piano"
      android:icon="@drawable/ico_piano"
      app:showAsAction="ifRoom"
      android:orderInCategory="1"/>
  <item android:id="@+id/intrumentos"
      android:title="@string/intrumentos"
      android:icon="@drawable/ico_guitar"
      app:showAsAction="ifRoom"
      android:orderInCategory="2"
      />
  <item android:id="@+id/animales"
      android:title="@string/animales"
      android:icon="@drawable/ico_animal"
      app:showAsAction="ifRoom"
      android:orderInCategory="3"/>
  <item android:id="@+id/grupo"
      android:title="@string/grupo"
      android:icon="@drawable/aboutus"
      app:showAsAction="ifRoom"
      android:orderInCategory="3"/>
  <item android:id="@+id/salir"
      android:title="@string/salir"
      android:icon="@drawable/salir"
      app:showAsAction="ifRoom"
      android:orderInCategory="3"/>
</menu>